# fastapi-boilerplate-with-postgres

./: .env  .env.example  .gitignore  Dockerfile  Fast API Boilerplate.session.sql  README.md  alembic.ini.example  docker-compose.yaml  main.py  makemigrations.sh  migrate.sh  pyproject.toml  requirements.txt
.github/workflows/: run-unittest.yaml
app/auth/: models.py  repo.py  routes.py  status_codes.py  utils.py
app/auth/schema/: common.py  token.py
app/auth/schema/v1/: user_schema.py
app/auth/tests/: test_users.py
app/auth/views/: token.py
app/auth/views/v1/: user_view.py
core/: celery.py  celery_beat_schedule.py  config.py  database.py  exceptions.py  logger.py  model_base.py  responses.py  schema.py
core/orm/: __init__.py  base_repo.py  repo.py
core/tests/: setup.py  test_core_functions.py
migrations/: env.py
migrations/versions/: 3a5f9e46a3f3_added_base_fields.py  576c0fbb5b9b_init.py
